--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "joi": "^17.6.2",
