--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/nvlannasik/innovillage-api#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
