--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "mongoose": "^6.6.3",
     "mongoose-auto-increment": "^5.0.1",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "ejs": "^3.1.8"
   }
 }
