--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/nvlannasik/innovillage-api#readme",
   "dependencies": {
+    "@google-cloud/storage": "^6.6.0",
     "@hapi/joi": "^17.1.1",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.0.1",
@@ -29,6 +30,7 @@
     "midtrans-client": "^1.3.1",
     "mongoose": "^6.6.3",
     "mongoose-auto-increment": "^5.0.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
